# kimi.k_cc_jungle

./: .gitignore  CLAUDE.md  README.md  main.py  package.py  prompt.md  pyproject.toml  requirements.txt
jungle/: __init__.py
jungle/engine/: __init__.py  ai.py  core.py  evaluation.py  legacy_ai.py  search.py  tables.py  v1_frozen.py
jungle/gui/: __init__.py  assets.py  board_view.py  dialogs.py  main_window.py  styles.py
jungle/model/: __init__.py  board.py  constants.py  zobrist.py
release/: README.md
scripts/: ablation.py  ai_vs_ai_smoke.py  benchmark.py  gauntlet.py  perft.py  smoke_release.py
tests/: conftest.py  test_ai_smoke.py  test_board_smoke.py  test_coverage.py  test_draw_rules.py  test_edge_cases.py  test_final_coverage.py  test_full_game_subprocess.py  test_gui_helpers.py  test_gui_integration.py  test_gui_modes.py  test_gui_smoke.py  test_layout_conformance.py  test_main_args.py  test_main_window.py  test_paint.py  test_rules.py  test_styles.py
tests/engine/: test_core_differential.py  test_evaluation.py  test_gauntlet.py  test_perft.py  test_search.py
