[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jungle-game"
version = "1.0.0"
description = "Windows desktop Jungle / Dou Shou Qi board game with AI"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "pytest-cov>=4.1",
    "PyInstaller>=6.0",
    "mypy>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jungle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q -m 'not slow'"
qt_api = "pyqt6"
markers = [
    "slow: long-running strength and performance tests (run with -m slow)",
]

[tool.coverage.run]
omit = ["jungle/engine/legacy_ai.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
