[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jungle-game"
version = "1.0.0"
description = "Windows desktop Jungle / Dou Shou Qi board game with built-in AI"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "pytest-cov>=4.1",
    "PyInstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jungle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q -m 'not slow'"
qt_api = "pyside6"
markers = [
    "slow: long-running strength and performance tests (run with -m slow)",
]

[tool.coverage.run]
omit = ["jungle/engine/legacy_ai.py", "jungle/engine/v1_frozen.py"]
